Fix jump when we expand one row. Fix tables being resorted when clicking the expand all.

--- a/app/assets/src/components/views/SampleViewV2/report_table.scss
+++ b/app/assets/src/components/views/SampleViewV2/report_table.scss
@@ -103,6 +103,12 @@
 .speciesRow,
 .row {
   padding-left: 5px;
+  // For some reason, react virtualized adds 8px padding to rows' style,
+  // when we expand a single column, from a previous value of 0.
+  // In theory is to make room for the scrollbar.
+  // We override it here to 0, specially since the last column - the NT/NR
+  // selector can be used for the scrollbar.
+  padding-right: 0px !important;
   &.highlighted {
     background-color: $primary-lightest;
     border-left: 5px solid $primary-lighter;
